RESOLVED FIXED13986
[CAIRO] Graphics fixes and cleanups
https://bugs.webkit.org/show_bug.cgi?id=13986
Summary [CAIRO] Graphics fixes and cleanups
Alp Toker
Reported 2007-06-04 08:28:50 PDT
Patch attached. This is part of the work leading up to SVG support.
Attachments
Cairo graphics fixes and cleanups (5.16 KB, patch)
2007-06-04 08:47 PDT, Alp Toker
andersca: review+
Alp Toker
Comment 1 2007-06-04 08:47:55 PDT
Created attachment 14852 [details] Cairo graphics fixes and cleanups
Anders Carlsson
Comment 2 2007-06-04 16:51:10 PDT
Comment on attachment 14852 [details] Cairo graphics fixes and cleanups r=me
Mark Rowe (bdash)
Comment 3 2007-06-04 16:54:21 PDT
Landed in r21974.
Note You need to log in before you can comment on or make changes to this bug.