WebCore/platform/graphics/ImageBuffer.h
@@ -67,6 +67,8 @@ namespace WebCore {
         CGImageRef cgImage() const;
 #elif PLATFORM(QT)
         QPixmap* pixmap() const;
+#elif PLATFORM(CAIRO)
+        _cairo_surface* surface() const;
 #endif
 
     private:
